# ai-radar-agent-case

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
ai_radar_agent/: __init__.py  __main__.py  brief.py  collector.py  config.py  dates.py  event_history.py  evidence_gate.py  feishu.py  feishu_bot.py  feishu_docx.py  feishu_result.py  final_top_auditor.py  llm.py  models.py  report.py  report_lint.py  report_reconcile.py  source_quality.py  top_event_audit.py  utils.py
demo_run/: demo_evidence_items.jsonl  demo_manifest.json  demo_output_report.md  demo_tool_calls.jsonl
docs/: 00_REQUIREMENTS.md  01_PRD.md  02_ARCHITECTURE.md  03_WORKFLOW.md  04_AUTONOMY_MATRIX.md  05_DATA_MODEL.md  06_TOOLS_AND_PERMISSIONS.md  07_SKILLS.md  08_PROMPTS.md  09_GATES_AND_GUARDRAILS.md  10_EVAL_PLAN.md  11_OBSERVABILITY.md  12_RUNBOOK.md  13_CHANGELOG.md  13_RUNTIME_OBJECT_MAP.md  ARCHITECTURE_OVERVIEW.md  GITHUB_SYNC.md  PUBLIC_MIRROR_SCOPE.md  STRATEGY_PANEL.md  case_study_ai_radar_week2.md
evals/: ai_radar_week2_eval_cases.jsonl  check_ai_radar_week2_eval_cases.py  edge_cases.jsonl  failure_cases.jsonl  golden_cases.jsonl  regression_cases.jsonl
schemas/: audit_result.schema.json  input.schema.json  output.schema.json  run_manifest.schema.json  state.schema.json  tool_call.schema.json
state/: event_history.sample.jsonl
tests/: .gitkeep  test_bocha_search.py  test_brief.py  test_cloudflare_trigger.py  test_collector.py  test_dates.py  test_env_example.py  test_event_history.py  test_evidence_gate.py  test_feishu.py  test_feishu_bot.py  test_feishu_docx.py  test_llm.py  (+12 more)
(+36 files in other folders)
