[project]
name = "ai-radar-agent"
version = "0.2.0"
description = "Daily AI frontier radar agent: recall-first search + DeepSeek generation + Feishu upload"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "PyYAML>=6.0.1",
  "feedparser>=6.0.11",
  "tenacity>=8.3.0",
  "tavily-python>=0.5.0",
]

[project.scripts]
ai-radar-agent = "ai_radar_agent.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["ai_radar_agent*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
